--- a/2025/speech-transcription-python/index.en.Rmd
+++ b/2025/speech-transcription-python/index.en.Rmd
@@ -145,8 +145,27 @@ For researchers incorporating this workflow into their methodology, the followin
 >
 > Batista, J. R. (2024). *Learn OpenAI Whisper: Transform your understanding of GenAI through robust and accurate speech processing solutions*. Packt Publishing Ltd.
 
+### Licence
 
+This workflow is made available under the [Creative Commons 4.0 Attribution 4.0 International licence](https://github.com/pablobernabeu/secure_local_HPC_speech_transcription/blob/main/Licence.md). Feel free to use, modify and distribute this CSL style.
 
+### Citation
+
+<div style="text-align: left;">
+<a href="https://doi.org/10.5281/zenodo.17624830"><img src="https://zenodo.org/badge/DOI/10.5281/zenodo.17624830.svg" alt="DOI" style="display: inline-block; margin: 0;"></a>
+</div>
+
+If you use this workflow in your research, please cite:
+
+```text
+@software{secure_local_HPC_speech_transcription,
+  title={Secure and scalable speech transcription for local and HPC},
+  author={Pablo Bernabeu},
+  year={2025},
+  doi={10.5281/zenodo.17624830},
+  url={https://doi.org/10.5281/zenodo.17624830}
+}
+```
 
 ## Conclusion
 
