--- a/2025/speech-transcription-python/index.en.Rmd
+++ b/2025/speech-transcription-python/index.en.Rmd
@@ -147,7 +147,7 @@ For researchers incorporating this workflow into their methodology, the followin
 
 ### Licence
 
-This workflow is made available under the [Creative Commons 4.0 Attribution 4.0 International licence](https://github.com/pablobernabeu/secure_local_HPC_speech_transcription/blob/main/Licence.md). Feel free to use, modify and distribute this CSL style.
+This workflow is made available under the [Creative Commons 4.0 Attribution 4.0 International licence](https://github.com/pablobernabeu/secure_local_HPC_speech_transcription/blob/main/Licence.md). 
 
 ### Citation
 
