--- a/presentation/scaling-systematic-reviews-a-solo-researchers-workflow-with-gemini/index.Rmd
+++ b/presentation/scaling-systematic-reviews-a-solo-researchers-workflow-with-gemini/index.Rmd
@@ -60,6 +60,10 @@ projects: []
 
 ## Background References
 
+<div class='hanging-indent'>
+
 Bernabeu, P. (2024). *rscopus_plus*. OSF. <https://doi.org/10.17605/OSF.IO/BUZQ6>
 
 Malik, M., & Sime, J. A. (2025). Teamwork, co-regulation, and socially shared regulation skills within engineering education studies: A GenAI-assisted scoping review. *ASEE Annual Conference & Exposition, Montreal, Quebec, Canada*. <https://doi.org/10.18260/1-2--57199>
+
+</div>
