--- a/2025/speech-transcription-python/index.en.Rmd
+++ b/2025/speech-transcription-python/index.en.Rmd
@@ -171,7 +171,7 @@ This workflow is made available under the [Creative Commons 4.0 Attribution 4.0 
 
 If you use this workflow in your research, please cite:
 
-> Bernabeu, P. (2025). *Secure and scalable speech transcription for local and HPC* (Version 1.0.0) [Computer software]. Zenodo. https://doi.org/10.5281/zenodo.17624830
+> <p class='hanging-indent'>Bernabeu, P. (2025). *Secure and scalable speech transcription for local and HPC* (Version 1.0.0) [Computer software]. Zenodo. https://doi.org/10.5281/zenodo.17624830</p>
 
 The recommended BibTeX entry is:
 
