--- a/publication/secure-local-hpc-speech-transcription/index.en.Rmd
+++ b/publication/secure-local-hpc-speech-transcription/index.en.Rmd
@@ -73,7 +73,7 @@ xaringanExtra::use_clipboard()
 
 If you use this workflow in your research, please cite:
 
-> Bernabeu, P. (2025). *Secure and scalable speech transcription for local and HPC* (Version 1.0.0) [Computer software]. Zenodo. https://doi.org/10.5281/zenodo.17624830
+> <p class='hanging-indent'>Bernabeu, P. (2025). *Secure and scalable speech transcription for local and HPC* (Version 1.0.0) [Computer software]. Zenodo. https://doi.org/10.5281/zenodo.17624830</p>
 
 The recommended BibTeX entry is:
 
