--- a/publication/secure-local-hpc-speech-transcription/index.en.Rmd
+++ b/publication/secure-local-hpc-speech-transcription/index.en.Rmd
@@ -27,7 +27,7 @@ publication_types:
   - 9
 preregistered: false
 open_materials: true
-open_data: false
+open_data: true
 publication: 'Zenodo'
 publication_short: ''
 abstract: "Cloud-based speech-to-text services are convenient, but they often have file size limits, lack transparency for reproducible research, and can pose privacy risks under regulations like GDPR. To address these limitations, this project introduces a production-ready, local transcription workflow using OpenAI's Whisper models. This self-contained system ensures complete data sovereignty and is designed for scalability, supporting batch operations on high-performance computing (HPC) clusters with GPU acceleration. The workflow includes advanced quality control, such as algorithms to detect and remove AI-generated repetitions, context-aware name masking for privacy, speaker diarisation, and a flexible audio enhancement pipeline. Implemented as a single Python script, this system offers a robust, reproducible, and secure alternative for academic and enterprise transcription."
