--- a/2023/a-new-function-to-plot-convergence-diagnostics-from-lme4-allfit/index.Rmd
+++ b/2023/a-new-function-to-plot-convergence-diagnostics-from-lme4-allfit/index.Rmd
@@ -3,6 +3,8 @@ title: 'A new function to plot convergence diagnostics from lme4::allFit()'
 author: 
 date: 2023-06-22
 slug: a-new-function-to-plot-convergence-diagnostics-from-lme4-allfit
+aliases:
+  - /2021/a-new-function-to-plot-convergence-diagnostics-from-lme4-allfit
 categories:
   - R
   - linear mixed-effects models
