--- a/2026/open-science-new-research-standard/index.en.Rmd
+++ b/2026/open-science-new-research-standard/index.en.Rmd
@@ -16,7 +16,7 @@ tags:
   - scientific integrity
   - research methods
 subtitle: ''
-summary: 'A look at the global shift to open science, exploring how transparency, preregistration, and open data are becoming the new standard for credible research, benefiting scientists, funders, and society.'
+summary: 'A look at the global shift to open science, exploring how transparency, preregistration, and open data are becoming the new standard for credible research, benefiting scientists, funders and society.'
 authors: []
 lastmod: ''
 featured: no
@@ -28,7 +28,7 @@ projects: []
 ---
 
 
-Scientific research is undergoing a fundamental transformation, born from a decade of introspection and a growing demand for integrity. What began as a response to the 'replication crisis' has evolved from a niche advocacy movement into a global standard for excellence. We are moving away from a 'trust me' culture, where findings were taken on faith, toward a 'show me' culture where transparency is the primary currency of credibility. This momentum is now irreversible, as underscored by recent publications from leading journals and platforms like *Nature* and *The Conversation*, including '[Trust but verify](https://www.nature.com/articles/s41563-023-01790-z)', '[Reproducibility and transparency: What’s going on and how can we help](https://www.nature.com/articles/s41467-024-54614-2)' and '[Reproducibility may be the key idea students need to balance trust in evidence with healthy scepticism](https://theconversation.com/reproducibility-may-be-the-key-idea-students-need-to-balance-trust-in-evidence-with-healthy-skepticism-251771)'.
+Scientific research is undergoing a fundamental transformation, born from a decade of introspection and a growing demand for integrity. What began as a response to the 'replication crisis' has evolved from a niche advocacy movement into a global standard for excellence. We are moving away from a 'trust me' culture, where findings were taken on faith, toward a 'show me' culture where transparency is the primary currency of credibility. This momentum is now irreversible, as underscored by recent publications from leading journals and platforms like *Nature* and *The Conversation*, including '[Trust but verify](https://www.nature.com/articles/s41563-023-01790-z)', '[Reproducibility and transparency: What’s going on and how can we help](https://www.nature.com/articles/s41467-024-54614-2)', and '[Reproducibility may be the key idea students need to balance trust in evidence with healthy scepticism](https://theconversation.com/reproducibility-may-be-the-key-idea-students-need-to-balance-trust-in-evidence-with-healthy-skepticism-251771)'.
 
 
 ## The Mechanics of Transparency
@@ -39,7 +39,7 @@ This transparent approach creates a beneficial scenario for everyone in the rese
 
 For the project itself, adopting these protocols provides prestige through rigour. It distinguishes the work from the 'black box' approach of traditional studies, and signals to peer reviewers and international collaborators that the study is a gold-standard project, positioned at the vanguard of modern academic practice.
 
-For researchers, especially those in the early stages of their careers, open science is a strategic move. Sharing data and code on platforms like the Open Science Framework (OSF) creates a public, citable portfolio of technical expertise. This demonstrates a capacity for meticulous, transparent work and facilitates recognition and collaboration far beyond a standard CV.
+For researchers, especially those in the early stages of their careers, open science is a strategic move. Sharing data and code on platforms like the Open Science Framework (OSF) creates a public, citable portfolio of technical expertise. This demonstrates a capacity for meticulous, transparent work, and facilitates recognition and collaboration far beyond a standard CV.
 
 Finally, for the wider scientific community, the true power of open science lies in its ability to accelerate discovery. By providing a unique, high-quality dataset and analysis framework, we allow others to independently verify our findings, which strengthens the overall body of knowledge, and to repurpose data for new research questions, which multiplies the impact of the original funding and fosters innovation.
 
